--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,3 +52,10 @@ android {
 flutter {
     source '../..'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
+
+dependencies {
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+}
