--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^0.4.5
   fluttertoast: ^5.0.1
   file_picker: ^1.12.0
+  firebase_storage: ^3.1.5
 
 dev_dependencies:
   flutter_test:
