--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   fluttertoast: ^5.0.1
   file_picker: ^1.12.0
   firebase_storage: ^3.1.5
+  flutter_spinkit: ^4.1.2+1
 
 dev_dependencies:
   flutter_test:
